testdata/baselines/reference/submodule/conformance/typeFromJSConstructor.symbols
//// [tests/cases/conformance/salsa/typeFromJSConstructor.ts] ////

=== a.js ===
function Installer () {
>Installer : Symbol(Installer, Decl(a.js, 0, 0))

    // arg: number
    this.arg = 0
    // unknown: string | boolean | null
    this.unknown = null
    // twice: string | undefined
    this.twice = undefined
>undefined : Symbol(undefined)

    this.twice = 'hi'
    // twices: any[] | null
    this.twices = []
    this.twices = null
}
Installer.prototype.first = function () {
>Installer.prototype : Symbol(prototype, Decl(lib.es5.d.ts, --, --))
>Installer : Symbol(Installer, Decl(a.js, 0, 0))
>prototype : Symbol(prototype, Decl(lib.es5.d.ts, --, --))

    this.arg = 'hi' // error
    this.unknown = 'hi' // ok
    this.newProperty = 1 // ok: number | boolean
    this.twice = undefined // ok
>undefined : Symbol(undefined)

    this.twice = 'hi' // ok
}
Installer.prototype.second = function () {
>Installer.prototype : Symbol(prototype, Decl(lib.es5.d.ts, --, --))
>Installer : Symbol(Installer, Decl(a.js, 0, 0))
>prototype : Symbol(prototype, Decl(lib.es5.d.ts, --, --))

    this.arg = false // error
    this.unknown = false // ok
    this.newProperty = false // ok
    this.twice = null // error
    this.twice = false // error
    this.twices.push(1) // error: Object is possibly null
    if (this.twices != null) {
        this.twices.push('hi')
    }
}

